--- a/Source_files/Healthcare_per_capita-cleaner.ipynb
+++ b/Source_files/Healthcare_per_capita-cleaner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -44,33 +44,39 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Location</th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>State</th>\n",
        "      <th>Health Spending per Capita</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>United States</td>\n",
        "      <td>$8045</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>Alabama</td>\n",
        "      <td>$7281</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>Alaska</td>\n",
        "      <td>$11064</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>Arizona</td>\n",
        "      <td>$6452</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>Arkansas</td>\n",
        "      <td>$7408</td>\n",
        "    </tr>\n",
@@ -79,15 +85,15 @@
        "</div>"
       ],
       "text/plain": [
-       "        Location Health Spending per Capita\n",
-       "0  United States                      $8045\n",
-       "1        Alabama                      $7281\n",
-       "2         Alaska                     $11064\n",
-       "3        Arizona                      $6452\n",
-       "4       Arkansas                      $7408"
+       "   Unnamed: 0          State Health Spending per Capita\n",
+       "0           0  United States                      $8045\n",
+       "1           1        Alabama                      $7281\n",
+       "2           2         Alaska                     $11064\n",
+       "3           3        Arizona                      $6452\n",
+       "4           4       Arkansas                      $7408"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +114,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.rename(columns={'Health Spending per Capita':'$$$'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -133,49 +148,49 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>State</th>\n",
-       "      <th>Health Spending per Capita</th>\n",
+       "      <th>$$$</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>United States</td>\n",
-       "      <td>$8045</td>\n",
+       "      <td>8045</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Alabama</td>\n",
-       "      <td>$7281</td>\n",
+       "      <td>7281</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Alaska</td>\n",
-       "      <td>$11064</td>\n",
+       "      <td>11064</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Arizona</td>\n",
-       "      <td>$6452</td>\n",
+       "      <td>6452</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Arkansas</td>\n",
-       "      <td>$7408</td>\n",
+       "      <td>7408</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           State Health Spending per Capita\n",
-       "0  United States                      $8045\n",
-       "1        Alabama                      $7281\n",
-       "2         Alaska                     $11064\n",
-       "3        Arizona                      $6452\n",
-       "4       Arkansas                      $7408"
+       "           State    $$$\n",
+       "0  United States   8045\n",
+       "1        Alabama   7281\n",
+       "2         Alaska  11064\n",
+       "3        Arizona   6452\n",
+       "4       Arkansas   7408"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +201,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.iloc[: , 1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Health Spending per Capita'] = df['Health Spending per Capita'].replace('[\\$,]', '', regex=True).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
