new table stuff

--- a/Source_files/us_state_vaccinations_cleaner.ipynb
+++ b/Source_files/us_state_vaccinations_cleaner.ipynb
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2030,7 +2030,7 @@
        "Wyoming                                                Wyoming  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2044,7 +2044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2053,7 +2053,7 @@
        "(51, 10)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2069,7 +2069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3070,7 +3070,7 @@
        "Wyoming                Wyoming  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3083,7 +3083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3095,7 +3095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -3116,7 +3116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3128,7 +3128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3137,11 +3137,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_new2.to_csv('state_vaccinations.csv')"
+    "df_new2.to_csv('state_vaccinations.csv', index=False)"
    ]
   },
   {
